[package]
name = "clocksource"
version = "0.4.1-alpha.0"
authors = ["Brian Martin <brayniac@gmail.com>"]

license = "MIT OR Apache-2.0"
readme = "README.md"

homepage = "https://github.com/brayniac/clocksource"
documentation = "https://docs.rs/clocksource"
repository = "https://github.com/brayniac/clocksource"

description = "clocksource provides TSC access with transparent fallback to clock_gettime()"

keywords = [ "clock", "time" ]

[dependencies]
libc = "0.2.15"

[target.'cfg(windows)'.dependencies]
lazy_static = "1.0"
winapi = { version = "0.3.4", features = ["profileapi", "sysinfoapi"] }

[dev-dependencies]
allan = "0.2.3"

[features]
default = []
asm = [ "rdtsc" ]
rdtsc = []